# Define package included headers (to be installed)
pkginclude_HEADERS = GammaLib.hpp \
                     GTypemaps.hpp \
                     GBase.hpp \
                     GContainer.hpp \
                     GRegistry.hpp \
                     GException.hpp \
                     GNodeArray.hpp \
                     GTools.hpp \
                     GCsv.hpp \
                     GRan.hpp \
                     GUrl.hpp \
                     GUrlFile.hpp \
                     GUrlString.hpp \
                     GVector.hpp \
                     GMatrixBase.hpp \
                     GMatrix.hpp \
                     GMatrixSparse.hpp \
                     GMatrixSymmetric.hpp \
                     GIntegral.hpp \
                     GDerivative.hpp \
                     GFunction.hpp \
                     GMath.hpp \
                     GFits.hpp \
                     GFitsHDU.hpp \
                     GFitsHeader.hpp \
                     GFitsHeaderCard.hpp \
                     GFitsImage.hpp \
                     GFitsImageByte.hpp \
                     GFitsImageSByte.hpp \
                     GFitsImageUShort.hpp \
                     GFitsImageShort.hpp \
                     GFitsImageULong.hpp \
                     GFitsImageLong.hpp \
                     GFitsImageLongLong.hpp \
                     GFitsImageFloat.hpp \
                     GFitsImageDouble.hpp \
                     GFitsTable.hpp \
                     GFitsAsciiTable.hpp \
                     GFitsBinTable.hpp \
                     GFitsTableCol.hpp \
                     GFitsTableBitCol.hpp \
                     GFitsTableBoolCol.hpp \
                     GFitsTableByteCol.hpp \
                     GFitsTableStringCol.hpp \
                     GFitsTableUShortCol.hpp \
                     GFitsTableShortCol.hpp \
                     GFitsTableULongCol.hpp \
                     GFitsTableLongCol.hpp \
                     GFitsTableLongLongCol.hpp \
                     GFitsTableFloatCol.hpp \
                     GFitsTableDoubleCol.hpp \
                     GFitsTableCFloatCol.hpp \
                     GFitsTableCDoubleCol.hpp \
                     GXml.hpp \
                     GXmlNode.hpp \
                     GXmlDocument.hpp \
                     GXmlText.hpp \
                     GXmlElement.hpp \
                     GXmlComment.hpp \
                     GXmlAttribute.hpp \
                     GXmlPI.hpp \
                     GVOClient.hpp \
                     GPha.hpp \
                     GArf.hpp \
                     GRmf.hpp \
                     GApplication.hpp \
                     GLog.hpp \
                     GApplicationPars.hpp \
                     GApplicationPar.hpp \
                     GOptimizer.hpp \
                     GOptimizerLM.hpp \
                     GOptimizerPar.hpp \
                     GOptimizerPars.hpp \
                     GOptimizerFunction.hpp \
                     GTestSuite.hpp \
                     GTestSuites.hpp \
                     GTestCase.hpp \
                     GSkyDir.hpp \
                     GHorizDir.hpp \
                     GSkyPixel.hpp \
                     GSkymap.hpp \
                     GSkyRegion.hpp \
                     GSkyRegions.hpp \
                     GSkyRegionCircle.hpp \
                     GSkyProjection.hpp \
                     GHealpix.hpp \
                     GWcsRegistry.hpp \
                     GWcs.hpp \
                     GWcsAIT.hpp \
                     GWcsAZP.hpp \
                     GWcsCAR.hpp \
                     GWcsTAN.hpp \
                     GWcsMER.hpp \
                     GWcsSTG.hpp \
                     GEnergy.hpp \
                     GEnergies.hpp \
                     GTime.hpp \
                     GTimes.hpp \
                     GTimeReference.hpp \
                     GCaldb.hpp \
                     GObservations.hpp \
                     GObservation.hpp \
                     GObservationRegistry.hpp \
                     GEvents.hpp \
                     GEventList.hpp \
                     GEventCube.hpp \
                     GEvent.hpp \
                     GEventAtom.hpp \
                     GEventBin.hpp \
                     GGti.hpp \
                     GRoi.hpp \
                     GEbounds.hpp \
                     GInstDir.hpp \
                     GResponse.hpp \
                     GPhotons.hpp \
                     GPhoton.hpp \
                     GSource.hpp \
                     GModelPar.hpp \
                     GModels.hpp \
                     GModel.hpp \
                     GModelRegistry.hpp \
                     GModelSky.hpp \
                     GModelData.hpp \
                     GModelSpatial.hpp \
                     GModelSpatialRegistry.hpp \
                     GModelSpatialPointSource.hpp \
                     GModelSpatialRadial.hpp \
                     GModelSpatialRadialDisk.hpp \
                     GModelSpatialRadialGauss.hpp \
                     GModelSpatialRadialShell.hpp \
                     GModelSpatialElliptical.hpp \
                     GModelSpatialEllipticalDisk.hpp \
                     GModelSpatialDiffuse.hpp \
                     GModelSpatialDiffuseConst.hpp \
                     GModelSpatialDiffuseCube.hpp \
                     GModelSpatialDiffuseMap.hpp \
                     GModelSpectral.hpp \
                     GModelSpectralRegistry.hpp \
                     GModelSpectralBrokenPlaw.hpp \
                     GModelSpectralConst.hpp \
                     GModelSpectralExpPlaw.hpp \
                     GModelSpectralSuperExpPlaw.hpp \
                     GModelSpectralFunc.hpp \
                     GModelSpectralGauss.hpp \
                     GModelSpectralLogParabola.hpp \
                     GModelSpectralNodes.hpp \
                     GModelSpectralPlaw.hpp \
                     GModelSpectralPlaw2.hpp \
                     GModelTemporal.hpp \
                     GModelTemporalRegistry.hpp \
                     GModelTemporalConst.hpp
